# HealthReport

./: .env.example  .gitignore  CLAUDE.md  README.md  claude_client.py  database.py  food_search.py  health.db-shm  health.db-wal  image_utils.py  main.py  pyproject.toml  report_generator.py  requirements.txt  run.bat  run.py  start.bat  test_slism_result.json
static/: common.css  common.js  history.html  index.html  report.html  settings.html  stats.html
仕様書/: claude_api_caching_batch_spec.md  history_edit_plan.md  meal_tracker_report_spec.md  meal_tracker_spec.md  phase15_review_and_recommendations.md  phase22_development_plan.md  phase22_review_and_recommendations.md  phase27_1_development_plan.md  phase28_development_plan.md  token_optimization_plan.md
設計書/: prompt_caching_batch_api_plan.md
